--- a/AWS/StaticMain/Portfolio/Default.html
+++ b/AWS/StaticMain/Portfolio/Default.html
@@ -3,63 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Ben'z Portfolio</title>
-    <style>
-        div{
-            border-radius: 5px;
-        }
-        #body{
-            width:100%;
-            height:100%;
-            margin:30px 0 0 0;
-            padding:0;
+    <link rel="stylesheet" href="portfolio.css" />
 
-        }
-
-        #wrapper{
-            width:700px;
-            margin: 0 auto;
-            background-color: #eee;
-            border: 1px solid #eee;
-            padding:0 20px;
-        }
-
-        .container{
-            margin-top:20px;
-            height:600px;
-            background-color: white;
-        }
-
-        #cutter{
-            margin-top:20px;
-            height:100px;
-            background-color: white;
-        }
-
-        #platter {
-            margin-top:20px;
-            height:100px;
-            column-count: 3;
-
-        }
-        .rowing{
-            float:left;
-            width:223px;
-            height: 100%;
-            background-color: white;
-
-        }
-
-    </style>
 </head>
 <body>
-<div id="header"></div>
-<div id="body">
+<div id="pageHeader"></div>
+<div id="pageBody">
     <div id="wrapper">
         <div class="container">
-            Its all about the web
+            <img src="src/img/Header.jpg" />
         </div>
-        <div id="cutter">
-            Its all about the web
+        <div id="narrowSection">
+          <span> A SHORT BIOGRAPHY - GET TO KNOW ME </span>
         </div>
         <div id="platter">
             <div class="rowing">
@@ -78,6 +33,6 @@
         </div>
     </div>
 </div>
-<div id="footer"></div>
+<div id="pageFooter"></div>
 </body>
 </html>
